[package]
name = "pcta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
rand = "0.8.5"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["cookies"] }
scraper = "0.14.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
ua_generator = "0.3.5"
